chore: change HttpLoggingFilter
chrore: update to java 21

fix: docker file