@@ -1,5 +1,5 @@
 # Stage 1: Build the application
-FROM maven:3.8.6-eclipse-temurin-17-alpine AS build
+FROM maven:3.9.5-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 
 RUN wget https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
@@ -13,7 +13,7 @@ RUN --mount=type=cache,target=/root/.m2 \
     mvn package -DskipTests 
 
 # Stage 2: Create the runtime image
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 
 RUN apk add --no-cache curl
@@ -24,4 +24,4 @@ COPY --from=build /app/target/novel-vippro-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8081
 
-ENTRYPOINT ["java", "-Xms256m", "-Xmx512m", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Xms256m", "-Xmx512m", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0","-XX:+UseZGC", "-XX:+ZGenerational", "-jar", "app.jar"]
